# CrossCode

./: .gitignore  README.md  index.html  package-lock.json  package.json  splash.html  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
licenses/: cpio.NOTICE
sdkmover/: Cargo.toml
sdkmover/src/: lib.rs  main.rs
src/: App.tsx
src-tauri/: Cargo.toml  cpio  sdkmoverbin  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lsp_utils.rs  main.rs  sourcekit_lsp.rs  templates.rs  terminal.rs  windows.rs
src-tauri/src/builder/: config.rs  crossplatform.rs  icon.rs  mod.rs  packer.rs  sdk.rs  swift.rs
src-tauri/src/sideloader/: apple.rs  apple_commands.rs  device.rs  mod.rs  screenshot.rs  sideload.rs  stdout.rs  syslog.rs
src-tauri/templates/swiftui/: Package.swift
src/components/: CodeEditor.css  CodeEditor.tsx  CommandButton.tsx  OperationView.tsx  SDKMenu.tsx  SwiftMenu.tsx  TabLike.tsx
src/components/Menu/: MenuBar.tsx  MenuBarDefinition.tsx  MenuGroup.tsx
src/components/Tiles/: BottomBar.tsx  CommandConsole.tsx  Console.css  Console.tsx  Editor.css  Editor.tsx  FileExplorer.tsx  FilteredConsole.tsx  MultiTerminal.tsx  Syslog.tsx  Terminal.tsx
src/pages/: About.tsx  IDE.css  IDE.tsx  New.tsx  NewTemplate.tsx  Onboarding.css  Onboarding.tsx
src/preferences/: PreferenceItemRenderer.tsx  helpers.ts  types.ts
src/preferences/pages/: appIds.tsx  appearance.tsx  appleId.ts  certificates.tsx  developer.ts  general.ts  index.ts  sourcekit.tsx  swift.tsx  terminal.ts
src/utilities/: Command.tsx  IDEContext.tsx  Shortcut.tsx  StoreContext.tsx  TauriFileSystemProvider.ts  UpdateContext.tsx  constants.ts  lsp-client.ts
