[package]
name = "crosscode"
version = "0.0.4"
description = "Cross platform iOS IDE"
authors = ["nab138"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.3", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.0"
tauri-plugin-fs = { version = "2.4.2", features= ["watch"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-os = "2.3.1"
tauri-plugin-process = "2.3.0"
idevice = { version = "0.1.40", features = ["usbmuxd", "syslog_relay", "core_device_proxy", "tunnel_tcp_stack", "rsd", "core_device", "dvt", "mobile_image_mounter", "tss"] }
futures = "0.3.31"
keyring = "2"
once_cell = "1.21.3"
sha1 = "0.10.6"
hex = "0.4.3"
openssl = { version = "0.10", features = ["vendored"] }
plist = { version = "1.7.4" }
zip = { version = "4.5", default-features = false, features = ["deflate"] }
isideload = { version = "0.1.9", features = ["vendored-botan", "vendored-openssl"] }
uuid = "1.18.0"
walkdir = "2.5.0"
dircpy = "0.3.19"
tar = "0.4.44"
reqwest = "0.12.23"
flate2 = "1.1.2"
regex = "1"
toml = "0.9.5"
tokio = { version = "1.47.1", features = ["process"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
sysinfo = "0.37.0"
tokio-util = "0.7.16"
image = "0.25.6"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
unxip-rs = "0.1.1"

[target.'cfg(unix)'.dependencies]
sdkmover = { path = "../sdkmover" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.4.0"
tauri-plugin-updater = "2.9.0"
